# Codec2-Android-Jni-Demo

Codec2Demo/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Codec2Demo/app/src/androidTest/java/com/huami/watch/codec2demo/: ExampleInstrumentedTest.java
Codec2Demo/app/src/main/: AndroidManifest.xml
Codec2Demo/app/src/main/cpp/: LogUtils.h  codec2_jni.cpp
Codec2Demo/app/src/main/cpp/codec2_0_6/: CMakeLists.txt  codebooklspmelvq.c  codebookmel.c
Codec2Demo/app/src/main/cpp/include/: LogUtils.h
Codec2Demo/app/src/main/java/com/huami/watch/codec2/: Codec2.java
Codec2Demo/app/src/main/java/com/huami/watch/codec2demo/: MainActivity.java  MemoryUtils.java
Codec2Demo/app/src/main/res/layout/: activity_main.xml
Codec2Demo/app/src/main/res/raw/: session.raw
Codec2Demo/app/src/main/res/values/: strings.xml
Codec2Demo/app/src/test/java/com/huami/watch/codec2demo/: ExampleUnitTest.java
